--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,7 @@ server {
 	proxy_set_header Host $host;
 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-	location /hello {
+	location ^~ /hello/ {
 		proxy_pass http://0.0.0.0;
 	}
 }
